gtk/sass/common/_misc.scss
/* ... */
@if $maj_ver == 3 {
  @if $mnr_ver > 23 {
    headerbar box.path-bar-box { @extend %slashed_pathbar; }
  }
}
@else {
  headerbar box.path-bar-box { @extend %slashed_pathbar; }
}

%slashed_pathbar {
  // enforce switching to flat-style
  .linked.path-bar button:not(:checked):not(:hover):not(:active) {
    border-color: transparent;
    background-color: transparent;
  }
}

.disk-space-display {
  border: 0 none transparent;

  &.free {
    @include radius($r, none);
    background-color: mix($fg, $base, percentage($a_trk_1)); // legacy
    color: mix($fg, $base, percentage($a_trk_1)); // >= 3.29.90
  }

  &.used {
    @include radius($r, none);
    background-color: $acc_bg;
    color: $acc_bg;
  }

  &.unknown {
    background-color: mix($acc_bg, $base, percentage($a_fg_3rd));
    color: mix($acc_bg, $base, percentage($a_fg_3rd));
  }
}

// 'batch-rename' dialogs
.conflict-row {
  background-color: $warn_bg;
  color: $sec_fix_fg;
  &:hover,
  &:active {
    background-color: $warn;
    color: $fix_fg;
  }
  &:selected { @extend %selected_items; }
}

// hide unwanted frame in batch-rename dialog
dialog.background.csd > box.dialog-vbox > grid.horizontal {
  > scrolledwindow.frame {
    > viewport.frame { margin: -1px; }
  }
}

.nautilus {
  &-canvas-item {
    @include radius($r_2, none);

    &.dim-label {
      color: $ter_fg;
      &:selected {
        &, &:focus { color: mix($sel_fg, $sel_bg, percentage($a_fg_3rd)); }
      }
    }
  }

  &-list-dim-label {
    color: $ter_fg;
    &:selected {
      &, &:focus { color: mix($sel_fg, $sel_bg, percentage($a_fg_3rd)); }
    }
  }
}

.documents-entry-tag { @extend .entry-tag; }

// /*********
//  * Geary *
//  *********/

.geary-titlebar-right {
  > .linked.raised > button {
    // tool-button array
    &.image-button:not(.text-button) {
    }

    // 'archive' button
    &:not(.image-button):not(.text-button):not(.suggested-action) {
      > widget > box > image { // archive icon
        margin-top: rem($baseline, $sw: 1.0); // reset baseline
      }
    }
  }

  > button.suggested-action { // 'send' button
  }

  box.horizontal:not(.linked):not(.right) {
    button.image-button:not(.text-button):not(.titlebutton) {
    }
  }

  button.suggested-action { // 'send' button
  }

  button.image-button.popup.toggle { // 'gear' button
  }
}

%folder_frame_border { border-width: 0 0 1px; }

%conversation_frame {
  > border { border: none; }

  treeview.view {
    background-color: $bg;
    font-weight: 400; // reset weight
    &:selected {
      &, &:focus {
        background-color: track($sel_bg, $a_trk_2);
        color: $fg;
        &:dir(ltr) { box-shadow: inset 4px 0 $sel_bg; }
        &:dir(rtl) { box-shadow: inset -4px 0 $sel_bg; }
      }
    }
    &:hover { background-color: $trk_bg; }
  }
}

%folder_frame {
  @extend %sidebar_template;

  treeview.view.sidebar {
    @extend %sidebar_treeview;

    &.cell { // = row height of placessidebar
      min-height: rem($small_widget);
      // padding-top: rem($menuitem_padding);
      // padding-bottom: rem($menuitem_padding);
    }
  }
}

@if $maj_ver == 3 {
  @if $mnr_ver < 23 {
    // left-pane styling (legacy)
    .sidebar.vertical > paned.sidebar-pane-separator {
      .conversation-frame { @extend %conversation_frame; }

      .folder-frame {
        > border { @extend %folder_frame_border; }

        > scrolledwindow { @extend %folder_frame; }
      }
    }
  }
}

// left-pane styling (current)
.sidebar.vertical > paned.geary-sidebar-pane-separator {
  .geary-conversation-frame { @extend %conversation_frame; }

  .geary-folder-frame {
    > border { @extend  %folder_frame_border; }

    > scrolledwindow { @extend %folder_frame; }
  }
}

window.background > box.vertical > paned.horizontal > frame {
  // right-paned scrolledwindow
  > box.vertical > paned.vertical > overlay {
    > scrolledwindow > scrollbar { // always use light-variant
      background-color: transparent;

      slider {
        background-color: track($fix_fg, $a_fg_3rd * $a_fg_3rd);
        &:hover { background-color: track($fix_fg, $a_fg_2nd * $a_fg_3rd); }
        &:active { background-color: $fix_fg; }
        &:disabled { opacity: $a_fg_bdp; }
      }

      &.overlay-indicator {
        &:not(.dragging):not(.hovering) slider {
          background-color: track($fix_fg, $a_fg_3rd * $a_fg_3rd);
        }
      }
    }

    > label.bottom { // mimic floating-bar styling
      padding: $toolbar_padding;
      border-style: solid;
      border-color: $div_fg;
      color: $fg;
      font-size: 90%;
      transition: none;
      opacity: $a_osd;

      &.left {
        border-radius: 0 $r_2 0 0;
        border-width: 1px 1px 0 0;
      }
      &.right {
        border-radius: $r_2 0 0 0;
        border-width: 1px 0 0 1px;
      }
    }
  }
}

@if $maj_ver == 3 {
  @if $mnr_ver < 23 {
    // right-pane styling (legacy)
    paned.vertical > overlay > scrolledwindow > overlay {
      > widget > widget > box > widget > headerbar { // in-line headerbars
      }
    }
  }
}

// right-pane styling (current)
stack#conversation_viewer {
  scrolledwindow.geary-conversation-scroller > viewport.frame {
    border: none; // unset borders
  }

  list.background.conversation-listbox {
    background-color: $bg;

    > row.activatable {
      > box.geary_email {
        margin: -1px; // hide hard-coded parent borders
        border-top: 1px solid $bg;

        grid.geary-message-summary {
          border-bottom: 1px solid $div_fg;
        }
      }

      &:not(.geary-expanded) { // retracted headers
        grid.geary-headers.vertical {
          label { @extend %dim_label; } // tone down
        }
      }

      > widget.geary-composer-embed {
        headerbar { // in-line headerbars
          margin: -1px -1px 0; // FIXME: does not work
          border-top: 1px solid $bg;
        }
      }
    }
  }
}
/* ... */

